everything updated to beige and better. Problem Media section has framing issues. Gap at start also not fixed.

--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -1,38 +1,48 @@
 /* Style all font awesome icons */
 .fa {
- padding: 10px;
- font-size: 30px;
- width: 40px;
+ padding: 12px;
+ font-size: 40px;
+ /* width: 40px; */
  text-align: center;
- text-decoration: none;
-   border-radius: 50%;
+ /* text-decoration: none; */
+   /* border-radius: 50%; */
 }
 
 /* Add a hover effect if you want */
 .fa:hover {
  opacity: 0.7;
+ color: inherit;
 }
 
 /* Set a specific color for each brand */
 
 /* Facebook */
 .fa-facebook {
- background: #3B5998;
- color: white;
+ /* background: #3B5998; */
+ /* color: white; */
+ color: #3B5998;
 }
 
 /* email */
 .fa-envelope {
- background: #bf67eb;
- color: white;
+ /* background: #635544;
+ color: white; */
+  color: #635544;
 }
 
 /* Twitter */
 .fa-twitter {
- background: #55ACEE;
- color: white;
+ /* background: #5185bd;
+ color: white; */
+ color: #009dd9;
 }
 
+/* youtube */
+.fa-youtube {
+ /* background: #c76b6b;
+ color: white; */
+ color: #c4302b;
+}
 
 /* START */
 
@@ -47,7 +57,8 @@ http://www.tooplate.com/view/2088-big-city
 */
 body {
 	/* background: #1A2D4B */
-  background: #42536e;
+  background: #e3ddd8;
+  /* ffffff */
 	position: relative;
 	color: black;
 	font-family: 'Georgia', Helvetica, Arial, sans-serif;
@@ -76,7 +87,7 @@ body {
     height: auto;
     z-index: -100;
     transform: translateX(-50%) translateY(-50%);
-	background: url('../img/bg302.jpg') no-repeat;
+	background: url('../img/bg303.jpg') no-repeat;
 	background-size: cover;
 	transition: 1s opacity;
 }
@@ -112,7 +123,7 @@ a:focus {
 	right: 0;
 	top: 0;
 	z-index: 1002;
-	background-color: rgba(42, 59, 85, 0.8);
+	background-color: rgba(59, 50, 40, 0.8);
 	height: 50px;
 }
 
@@ -194,7 +205,7 @@ button:focus { outline: none; }
 .cd-slider-nav .nav-item.selected .nav-link,
 .cd-slider-nav .nav-link:hover,
 .cd-slider-nav .nav-link:focus {
-	background-color: #1a2d4b;
+	background-color: #3b3228;
 	color: white;
 }
 
@@ -240,12 +251,18 @@ button:focus { outline: none; }
   /* background-color: #1A2D4B; */
   background-color: #42536e;
 }
+.tm-bg-dark-brown {
+  background-color: #635544;
+}
+.tm-bg-dusty-brown {
+  background-color: #b8a58d;
+}
 .tm-bg-white {
 	background-color: rgba(255,255,255,0.8);
 	color: black;
 }
-.tm-bg-brown { background-color: #474747; }
-.tm-bg-dark-brown { background-color: #5a471c; }
+.tm-bg-brown { background-color: #635544; }
+.tm-bg-dark-brown { background-color: #635544; }
 .tm-home-description-container { padding: 50px; }
 
 /* .tm-home-container-bg {
@@ -393,13 +410,13 @@ textarea { height: 168px; }
    Author's custom styles
    ========================================================================== */
    #loader-wrapper { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 2000; }
-   #loader { display: block; position: relative; left: 50%; top: 50%; width: 150px; height: 150px; margin: -75px 0 0 -75px; border-radius: 50%; border: 3px solid transparent; border-top-color: #3498db; /* Chrome, Opera 15+, Safari 5+ */
+   #loader { display: block; position: relative; left: 50%; top: 50%; width: 150px; height: 150px; margin: -75px 0 0 -75px; border-radius: 50%; border: 3px solid transparent; border-top-color: #3b3228; /* Chrome, Opera 15+, Safari 5+ */
    	animation: spin 2s linear infinite; /* Chrome, Firefox 16+, IE 10+, Opera */ z-index: 2001; }
    #loader:before { content: ""; position: absolute; top: 5px; left: 5px; right: 5px; bottom: 5px; border-radius: 50%; border: 3px solid transparent;
-   	border-top-color: #e74c3c; /* Chrome, Opera 15+, Safari 5+ */
+   	border-top-color: #756754; /* Chrome, Opera 15+, Safari 5+ */
    animation: spin 3s linear infinite; /* Chrome, Firefox 16+, IE 10+, Opera */ }
    #loader:after { content: ""; position: absolute; top: 15px; left: 15px; right: 15px; bottom: 15px; border-radius: 50%; border: 3px solid transparent;
-border-top-color: #f9c922; /* Chrome, Opera 15+, Safari 5+ */ animation: spin 1.5s linear infinite; /* Chrome, Firefox 16+, IE 10+, Opera */ }
+border-top-color: #b8a58d; /* Chrome, Opera 15+, Safari 5+ */ animation: spin 1.5s linear infinite; /* Chrome, Firefox 16+, IE 10+, Opera */ }
 @keyframes spin {
 	0%   {  /* Chrome, Opera 15+, Safari 3.1+ */  /* IE 9 */
 		transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
@@ -446,7 +463,7 @@ border-top-color: #f9c922; /* Chrome, Opera 15+, Safari 5+ */ animation: spin 1.
     top: 44px;
 }
 
-.cd-slider-nav .navbar-nav { background-color: #455471; }
+.cd-slider-nav .navbar-nav { background-color: #b8a58d; }
 
 .cd-slider-nav a,
 .navbar-nav .nav-link { height: 50px; }
@@ -494,6 +511,40 @@ border-top-color: #f9c922; /* Chrome, Opera 15+, Safari 5+ */ animation: spin 1.
 .tm-img {
   	width: 100%;
   	height: auto;
+  	border: 10px solid rgba(255,255,255,0.8);
+  	margin: 0 auto;
+}
+.tm-img-smaller {
+  	width: 50%;
+  	height: auto;
+  	border: 10px solid rgba(255,255,255,0.8);
+  	margin: 0 auto;
+}
+
+.video-container-padder {
+    position: relative;
+    padding-top: 0%; /* 16:9 */
+    padding-bottom: 30%; /* 16:9 */
+}
+
+.video-container-padder-media {
+    position: relative;
+    padding-top: 0%; /* 16:9 */
+    padding-bottom: 5%; /* 16:9 */
+}
+
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    height: 0;
+}
+
+.tm-ytvid {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   	border: 10px solid rgba(255,255,255,0.8);
   	margin: 0 auto;
 }
@@ -572,6 +623,7 @@ border-top-color: #f9c922; /* Chrome, Opera 15+, Safari 5+ */ animation: spin 1.
 
 .tm-sm-margin-b { margin-bottom: 30px; }
 .tm-2-col-equal-height { height: 77%; }
+.tm-2-col-equal-width { width: 77%; }
 
 @media only screen and (min-width: 768px) {
 
